# iteen-python-image

./: LICENSE  README.md  TODO.md  Taskfile.yml  compose.yml
src/: Dockerfile
src/dependencies/: .flake8  Taskfile.yml  install-odbc.sh  pyproject.toml  system.build.txt  system.prod.txt
