[tool.poetry]
name = "iteen-python"
version = "1.0.0"
description = "Base Python distribution for ITeen Projects"
authors = ["Alexander Sidorov <a375296648709@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
apscheduler = "3.10.4"
argon2-cffi = "23.1.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
click = "8.1.7"
cython = "3.0.10"
dj-database-url = "2.1.0"
django = "5.0.4"
django-axes = "6.4.0"
django-cors-headers = "4.3.1"
django-countries = "7.6.1"
django-health-check = "3.18.1"
django-import-export = "3.3.8"
django-phonenumber-field = {extras = ["phonenumbers"], version = "7.3.0"}
django-rest-knox = "4.2.0"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
djoser = "2.2.2"
drf-extra-fields = "3.7.0"
drf-spectacular = "0.27.2"
environs = {extras = ["django"], version = "11.0.0"}
gunicorn = "22.0.0"
httpx = {extras = ["brotli"], version = "0.27.0"}
mssql-django = "1.5"
orjson = "3.10.1"
pendulum = "3.0.0"
pillow = "10.3.0"
psycopg2-binary = "2.9.9"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
pyjwt = "2.8.0"
pyodbc = "5.1.0"
pyotp = "2.9.0"
python = "3.11.8"
python-decouple = "3.8"
python-dotenv = "1.0.1"
redis = {extras = ["hiredis"], version = "5.0.4"}
reportlab = "4.2.0"
requests = "2.31.0"
sentry-sdk = {extras = ["django", "sqlalchemy"], version = "2.0.1"}
sqlalchemy = "2.0.29"
structlog = "24.1.0"
tenacity = "8.2.3"
transliterate = "1.10.2"


[tool.poetry.group.dev.dependencies]
autoflake = "2.3.1"
black = "24.4.2"
coverage = {extras = ["toml"], version = "7.5.0"}
devtools = {extras = ["pygments"], version = "0.12.2"}
django-stubs = "4.2.7"
djangorestframework-stubs = "3.14.5"
faker = "24.14.0"
flake8 = "7.0.0"
flake8-annotations-complexity = "0.0.8"
flake8-bandit = "4.1.1"
flake8-black = "0.3.6"
flake8-bugbear = "24.4.26"
flake8-builtins = "2.5.0"
flake8-cognitive-complexity = "0.1.0"
flake8-comprehensions = "3.14.0"
flake8-debugger = "4.1.2"
flake8-executable = "2.1.3"
flake8-expression-complexity = "0.0.11"
flake8-fixme = "1.1.1"
flake8-import-order = "0.18.2"
flake8-multiline-containers = "0.0.19"
flake8-mutable = "1.2.0"
flake8-pep3101 = "2.1.0"
flake8-print = "5.0.0"
flake8-printf-formatting = "1.1.2"
flake8-quotes = "3.4.0"
flake8-simplify = "0.21.0"
flake8-variables-names = "0.0.6"
freezegun = "1.5.0"
httpie = "3.2.2"
ipython = "8.24.0"
isort = "5.13.2"
jsonschema = "4.21.1"
mypy = "1.10.0"
pep8-naming = "0.13.3"
pip-tools = "7.4.1"
pyproject-flake8 = "7.0.0"
pytest = "8.1.2"
pytest-cov = "5.0.0"
pytest-httpx = "0.30.0"
pytest-mock = "3.14.0"
pytest-sugar = "1.0.0"
watchfiles = "0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
